tidos/tests/native_element/panics/single_word_struct_has_no_hyphen.rs
use tidos::native_element;

#[native_element]
pub struct Counter;

fn main() {}